--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,12 @@ body {
 .travel-container{
     border: 1px solid black;
     flex-direction: column;
-    padding-left: 200px;
+    align-items: center;
 }
+/* .travel-container>*{
+    margin: 10px;
+    
+} */
 
 .flex{
     display: flex;
