--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,47 @@
-*{
+* {
     box-sizing: border-box;
 }
+
+/* Basic */
 
 body {
     margin: 0;
 }
 
-.travel-container{
-    border: 1px solid black;
-    flex-direction: column;
-    align-items: center;
+li {
+    line-height: 0;
+    list-style-type: none;
 }
-/* .travel-container>*{
-    margin: 10px;
-    
-} */
 
-.flex{
-    display: flex;
+.travel-container {
+    border: 1px solid black;
+    width: 700px;
+    height: 600px;
+    margin: auto;
 }
-.location-table{
+
+.location-table {
     border: 1px solid black;
     width: 100px;
     height: 100px;
 }
-.travel-container .location-map{
-width: 300px;
-height: 300px;
 
+.travel-container .location-map {
+    width: 300px;
+    height: 300px;
+}
+
+/* Helpers */
+
+.flex {
+    display: flex;
+}
+
+.flex-columns {
+    display: flex;
+    flex-direction: column;
+}
+
+.space-evenly {
+    justify-content: space-evenly;
 }
